# translate-app

./: README.md  pyproject.toml
src/: index.py
src/static/: styles.css
src/templates/: index.html
