[project]
name = "translate-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "requests>=2.32.3",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "tensorflow>=2.18.0",
    "tf-keras>=2.18.0",
    "transformers>=4.46.3",
]
