[project]
name = "translate-app"
version = "0.1.0"
description = "An app for translating English to Finnish with Helsinki-NLP/opus-mt-en-fi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "requests>=2.32.3",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "pylint>=3.3.2",
]
